--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.7.0",
     "@astrojs/mdx": "^0.11.1",
     "@astrojs/partytown": "^1.0.0",
     "@astrojs/react": "^1.1.3",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.0",
+    "@astrolib/seo": "^0.2.1",
     "astro": "^1.2.4",
+    "astro-icon": "^0.7.3",
+    "limax": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@astrolib/analytics": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "eslint": "^8.23.1",
+    "eslint-plugin-astro": "^0.19.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1"
   }
 }
