--- a/package.json
+++ b/package.json
@@ -21,15 +21,23 @@
     "astro": "^1.2.4",
     "astro-icon": "^0.7.3",
     "limax": "^3.0.0",
+    "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@astrolib/analytics": "^0.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.11",
     "eslint": "^8.23.1",
     "eslint-plugin-astro": "^0.19.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1"
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "postcss-import": "^15.0.0",
+    "postcss-nesting": "^10.2.0",
+    "sass": "^1.54.9"
   }
 }
