--- a/.prettierrc
+++ b/.prettierrc
@@ -12,5 +12,9 @@
         "useTabs": false
       }
     }
+  ],
+  "extends": [
+    "stylelint-config-standard-scss",
+    "stylelint-config-prettier-scss"
   ]
 }
