--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^5.0.0"
   }
 }
