--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,4 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "ritwickdey.live-sass"],
+  "recommendations": ["astro-build.astro-vscode", "glenn2223.live-sass"],
   "unwantedRecommendations": []
 }
