--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.0",
     "@astrolib/seo": "^0.2.1",
+    "@fontsource/roboto": "^4.5.8",
     "astro": "^1.2.4",
     "astro-icon": "^0.7.3",
     "limax": "^3.0.0",
