--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@fontsource/roboto": "^4.5.8",
     "astro": "^1.2.4",
     "astro-icon": "^0.7.3",
+    "daisyui": "^2.31.0",
     "limax": "^3.0.0",
-    "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8",
@@ -35,9 +35,11 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.11",
+    "generate-placeholder-image": "^1.1.0",
     "eslint": "^8.23.1",
     "eslint-plugin-astro": "^0.19.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "lorem-ipsum": "^2.0.8",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
     "sass": "^1.54.9",
