--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -34,6 +34,8 @@ jobs:
         
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
+        with: 
+          path: "dist/"
 
   deploy:
     needs: build
