--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,7 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "glenn2223.live-sass"],
-  "unwantedRecommendations": []
+	"recommendations": [
+		"astro-build.astro-vscode",
+		"glenn2223.live-sass"
+	],
+	"unwantedRecommendations": []
 }
