--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro-icon": "^0.7.3",
     "daisyui": "^2.31.0",
     "limax": "^3.0.0",
+    "react": "^18.2.0",
     "tailwindcss": "^3.1.8",
     "three": "^0.144.0",
     "wavy-svg": "^1.1.2"
@@ -32,6 +33,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/react": "^18.0.20",
     "autoprefixer": "^10.4.11",
     "eslint": "^8.23.1",
     "eslint-plugin-astro": "^0.19.0",
