--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,16 @@
 {
-  "printWidth": 120,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "useTabs": true,
-  "overrides": [
-    {
-      "files": [".*", "*.json", "*.md", "*.toml", "*.yml"],
-      "options": {
-        "useTabs": false
-      }
-    }
-  ],
-  "extends": [
-    "stylelint-config-standard-scss",
-    "stylelint-config-prettier-scss"
-  ]
+	"printWidth": 120,
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 4,
+	"trailingComma": "es5",
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": [".*", "*.json", "*.md", "*.toml", "*.yml"],
+			"options": {
+				"useTabs": true
+			}
+		}
+	]
 }
