single quote settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,7 @@
 	},
 	"editor.quickSuggestions": {
 		"strings": true
-	}
+	},
+	"prettier.jsxSingleQuote": true,
+	"prettier.singleQuote": true
 }
