--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@astrojs/tailwind": "^2.0.0",
 		"@astrolib/seo": "^0.2.1",
 		"@fontsource/roboto": "^4.5.8",
+		"@react-three/drei": "^9.32.0",
+		"@react-three/fiber": "^8.8.2",
 		"astro": "^1.2.4",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
@@ -34,6 +36,7 @@
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.7",
 		"@types/react": "^18.0.20",
+		"@types/three": "^0.144.0",
 		"autoprefixer": "^10.4.11",
 		"eslint": "^8.23.1",
 		"eslint-plugin-astro": "^0.19.0",
