--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"daisyui": "^2.31.0",
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"wavy-svg": "^1.1.2"
