--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
 		"strings": true
 	},
 	"prettier.jsxSingleQuote": true,
-	"prettier.singleQuote": true
+	"prettier.singleQuote": true,
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
