--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fontsource/roboto": "^4.5.8",
 		"@react-three/drei": "^9.32.0",
 		"@react-three/fiber": "^8.8.2",
+		"@react-three/postprocessing": "^2.6.2",
 		"astro": "^1.2.4",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
