--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@astrojs/tailwind": "^2.0.0",
 		"@astrolib/seo": "^0.2.1",
 		"@fontsource/roboto": "^4.5.8",
+		"@react-spring/three": "^9.5.4",
 		"@react-three/drei": "^9.32.0",
 		"@react-three/fiber": "^8.8.2",
 		"@react-three/postprocessing": "^2.6.2",
@@ -27,6 +28,7 @@
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-inview": "^4.5.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"wavy-svg": "^1.1.2"
