--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hook-inview": "^4.5.0",
+		"react-intersection-observer": "^9.4.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"wavy-svg": "^1.1.2"
