--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"astro": "^1.3.0",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
+		"framer-motion": "^7.3.6",
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
