--- a/package.json
+++ b/package.json
@@ -18,19 +18,17 @@
 		"@astrojs/tailwind": "^2.0.1",
 		"@astrolib/seo": "^0.2.1",
 		"@fontsource/roboto": "^4.5.8",
-		"@react-spring/three": "^9.5.4",
-		"@react-spring/web": "^9.5.4",
 		"@react-three/drei": "^9.32.0",
 		"@react-three/fiber": "^8.8.2",
 		"@react-three/postprocessing": "^2.6.2",
 		"astro": "^1.3.0",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
-		"framer-motion": "^7.3.6",
+		"framer-motion": "^6.5.1",
+		"framer-motion-3d": "^6.5.1",
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-intersection-observer": "^9.4.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"wavy-svg": "^1.1.2"
