--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@example/basics",
 	"type": "module",
+	"exports": "./index.js",
+	"node": ">=14.16",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -24,13 +26,14 @@
 		"astro": "^1.3.0",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
-		"framer-motion": "^6.5.1",
-		"framer-motion-3d": "^6.5.1",
+		"framer-motion": "^7.3.6",
+		"framer-motion-3d": "^7.3.6",
 		"limax": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
+		"upgrade": "^1.1.0",
 		"wavy-svg": "^1.1.2"
 	},
 	"devDependencies": {
