--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,4 +1,5 @@
 steps:
+  #* PACK
   - name: gcr.io/k8s-skaffold/pack
     args:
       - build
@@ -8,11 +9,29 @@ steps:
       - '--path=.'
     id: Buildpack
     entrypoint: pack
+    volumes:
+    - name: 'myvolume'
+      path: '/persistent_volume'
+
+  #* PUSH
   - name: gcr.io/cloud-builders/docker
     args:
       - push
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
     id: Push
+    volumes:
+    - name: 'myvolume'
+      path: '/persistent_volume'
+
+  - name: 'ubuntu'
+    entrypoint: 'bash'
+    args:
+      - 'ls'
+    volumes:
+    - name: 'myvolume'
+      path: '/persistent_volume'
+
+  #* DEPLOY
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     args:
       - run
@@ -27,10 +46,16 @@ steps:
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
+    volumes:
+    - name: 'myvolume'
+      path: '/persistent_volume'
+
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+
 options:
   substitutionOption: ALLOW_LOOSE
+
 substitutions:
   _LABELS: gcb-trigger-id=9af36d00-4924-4dde-9343-b33056b4745d
   _TRIGGER_ID: 9af36d00-4924-4dde-9343-b33056b4745d
@@ -38,6 +63,7 @@ substitutions:
   _GCR_HOSTNAME: us.gcr.io
   _PLATFORM: managed
   _SERVICE_NAME: sw-site
+
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
