--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"upgrade": "^1.1.0",
-		"wavy-svg": "^1.1.2"
-	},
-	"devDependencies": {
+		"wavy-svg": "^1.1.2",
 		"@astrolib/analytics": "^0.2.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
@@ -57,5 +55,8 @@
 		"stylelint-config-recommended-scss": "^7.0.0",
 		"stylelint-config-standard": "^28.0.0",
 		"stylelint-config-standard-scss": "^5.0.0"
+	},
+	"devDependencies": {
+
 	}
 }
