--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 		"three": "^0.144.0",
 		"upgrade": "^1.1.0",
 		"wavy-svg": "^1.1.2",
+		"postcss-import": "^15.0.0"
+	},
+	"devDependencies": {
 		"@astrolib/analytics": "^0.2.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
@@ -47,7 +50,6 @@
 		"eslint-plugin-astro": "^0.19.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"lorem-ipsum": "^2.0.8",
-		"postcss-import": "^15.0.0",
 		"postcss-nesting": "^10.2.0",
 		"sass": "^1.55.0",
 		"stylelint": "^14.12.1",
@@ -55,8 +57,5 @@
 		"stylelint-config-recommended-scss": "^7.0.0",
 		"stylelint-config-standard": "^28.0.0",
 		"stylelint-config-standard-scss": "^5.0.0"
-	},
-	"devDependencies": {
-
 	}
 }
