--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^2.0.1",
 		"@astrolib/seo": "^0.2.1",
+		"@astrolib/analytics": "^0.2.2",
 		"@fontsource/roboto": "^4.5.8",
 		"@react-three/drei": "^9.32.0",
 		"@react-three/fiber": "^8.8.2",
@@ -35,23 +36,22 @@
 		"three": "^0.144.0",
 		"upgrade": "^1.1.0",
 		"wavy-svg": "^1.1.2",
-		"postcss-import": "^15.0.0"
-	},
-	"devDependencies": {
-		"@astrolib/analytics": "^0.2.2",
+		"postcss-import": "^15.0.0",
+		"postcss-nesting": "^10.2.0",
+		"sass": "^1.55.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.7",
+		"lorem-ipsum": "^2.0.8",
 		"@types/react": "^18.0.21",
-		"@types/three": "^0.144.0",
+		"@types/three": "^0.144.0"
+	},
+	"devDependencies": {
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.24.0",
 		"eslint-plugin-astro": "^0.19.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"lorem-ipsum": "^2.0.8",
-		"postcss-nesting": "^10.2.0",
-		"sass": "^1.55.0",
 		"stylelint": "^14.12.1",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recommended-scss": "^7.0.0",
