--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -30,6 +30,7 @@ steps:
         --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID,$_LABELS
       - '--region=$_DEPLOY_REGION'
       - '--quiet'
+      - '--memory 1024Mi'
     id: Deploy
     entrypoint: gcloud
 
