--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro build",
+		"start": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro"
