--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro dev --host",
-		"build": "astro build",
+		"start": "astro build --host",
+		"build": "astro build --host",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
