--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "astro dev --config astro.config.dev.mjs",
-		"start": "astro build --host --config astro.config.build.mjs",
-		"build": "astro build --host --config astro.config.build.mjs",
+		"start": "astro build --config astro.config.build.mjs --port 3000",
+		"build": "astro build --config astro.config.build.mjs --port 3000",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
