--- a/package.json
+++ b/package.json
@@ -18,34 +18,35 @@
 		"@astrojs/react": "^1.1.4",
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^2.0.1",
-		"@astrolib/seo": "^0.2.1",
 		"@astrolib/analytics": "^0.2.2",
+		"@astrolib/seo": "^0.2.1",
 		"@fontsource/roboto": "^4.5.8",
 		"@react-three/drei": "^9.32.0",
 		"@react-three/fiber": "^8.8.2",
 		"@react-three/postprocessing": "^2.6.2",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/line-clamp": "^0.4.2",
+		"@tailwindcss/typography": "^0.5.7",
+		"@types/react": "^18.0.21",
+		"@types/three": "^0.144.0",
 		"astro": "^1.3.0",
 		"astro-icon": "^0.7.3",
 		"daisyui": "^2.31.0",
 		"framer-motion": "^7.3.6",
 		"framer-motion-3d": "^7.3.0",
 		"limax": "^3.0.0",
+		"lorem-ipsum": "^2.0.8",
+		"postcss-import": "^15.0.0",
+		"postcss-nesting": "^10.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-merge-refs": "^2.0.1",
+		"sass": "^1.55.0",
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"upgrade": "^1.1.0",
-		"wavy-svg": "^1.1.2",
-		"postcss-import": "^15.0.0",
-		"postcss-nesting": "^10.2.0",
-		"sass": "^1.55.0",
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/line-clamp": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.7",
-		"lorem-ipsum": "^2.0.8",
-		"@types/react": "^18.0.21",
-		"@types/three": "^0.144.0"
+		"wavy-svg": "^1.1.2"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.12",
