--- a/cloudbuild.bak.yml
+++ b/cloudbuild.bak.yml
@@ -10,14 +10,14 @@ steps:
     id: Buildpack
     entrypoint: pack
 
-      #* PUSH
+  #* PUSH
   - name: gcr.io/cloud-builders/docker
     args:
       - push
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
     id: Push
 
-      #* DEPLOY
+  #* DEPLOY
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     args:
       - run
@@ -35,3 +35,19 @@ steps:
 
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+
+options:
+  substitutionOption: ALLOW_LOOSE
+
+substitutions:
+  _TRIGGER_ID: a22eefad-f82d-4773-b36e-16ccbf3e12ec
+  _DEPLOY_REGION: us-central1
+  _GCR_HOSTNAME: us.gcr.io
+  _PLATFORM: managed
+  _SERVICE_NAME: sw-site-us-central
+  _LABELS: gcb-trigger-id=a22eefad-f82d-4773-b36e-16ccbf3e12ec
+  
+tags:
+  - gcp-cloud-build-deploy-cloud-run
+  - gcp-cloud-build-deploy-cloud-run-managed
+  - sw-site-us-central
