--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "astro dev --config astro.config.dev.mjs --port 8080",
-		"start": "astro dev --config astro.config.dev.mjs --port 8080",
-		"build": "astro build --config astro.config.build.mjs --port 8080",
+		"dev": "astro dev --config astro.config.dev.mjs --port 8080 --host",
+		"start": "astro dev --config astro.config.build.mjs --port 8080 --host",
+		"build": "astro build --config astro.config.build.mjs --port 8080 --host",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
