--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
 			"@widgets/*": [
 				"src/components/widgets/*"
 			],
+			"@icons/*": [
+				"src/components/icons/*"
+			],
 			"@layouts/*": [
 				"src/layouts/*"
 			]
