--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,12 @@
 {
-	"extends": "stylelint-config-standard-scss"
+	"extends": "stylelint-config-standard-scss",
+	"rules": {
+		"indentation": "tab",
+		"scss/at-rule-no-unknown": [
+			true,
+			{
+				"ignoreAtRules": ["tailwind"]
+			}
+		]
+	}
 }
