--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,18 +1,18 @@
 {
 	"extends": "stylelint-config-standard-scss",
 	"rules": {
-		"scss/indentation": "tab",
-		"scss/alpha-value-notation": "number",
-		"scss/at-rule-no-unknown": [
-			true,
-			{
-				"ignoreAtRules": ["tailwind"]
-			}
-		],
-		"scss/at-rule-empty-line-before": [
+		"indentation": "tab",
+		"alpha-value-notation": "number",
+		"at-rule-empty-line-before": [
 			"always",
 			{
 				"except": ["blockless-after-same-name-blockless"]
+			}
+		],
+		"at-rule-no-unknown": [
+			true,
+			{
+				"ignoreAtRules": ["tailwind"]
 			}
 		]
 	}
