--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@astrojs/image": "^0.9.1",
 		"@astrojs/mdx": "^0.11.4",
+		"@astrojs/partytown": "^1.0.1",
 		"@astrojs/react": "^1.1.4",
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^2.0.2",
@@ -47,18 +48,21 @@
 		"tailwindcss": "^3.1.8",
 		"three": "^0.145.0",
 		"upgrade": "^1.1.0",
+		"vite": "^3.1.7",
 		"wavy-svg": "^1.1.2"
 	},
 	"devDependencies": {
+		"@vitejs/plugin-legacy": "^2.2.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.24.0",
 		"eslint-plugin-astro": "^0.19.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"firebase-tools": "^11.13.0",
 		"stylelint": "^14.13.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recommended-scss": "^7.0.0",
 		"stylelint-config-standard": "^28.0.0",
 		"stylelint-config-standard-scss": "^5.0.0",
-		"firebase-tools": "^11.13.0"
+		"terser": "^5.15.1"
 	}
 }
