--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"allowJs": true,
 		"baseUrl": ".",
 		"paths": {
+			"~/*": ["src/*"],
 			"@images/*": ["src/assets/images/*"],
 			"@styles/*": ["src/assets/styles/*"],
 			"@components/*": ["src/components/*"],
@@ -22,7 +23,6 @@
 			"@widgets/*": ["src/components/widgets/*"],
 			"@icons/*": ["src/components/icons/*"],
 			"@layouts/*": ["src/layouts/*"],
-
 			"@utils/*": ["src/utils/*"]
 		}
 	}
