--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"allowJs": true,
 		"baseUrl": ".",
 		"paths": {
+			"~/*": ["src/*"],
 			"@images/*": ["src/assets/images/*"],
 			"@styles/*": ["src/assets/styles/*"],
 			"@components/*": ["src/components/*"],
