--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/three": "^0.146.0",
 		"astro": "^1.6.8",
 		"astro-icon": "^0.8.0",
+		"astro-imagetools": "^0.6.11",
 		"daisyui": "^2.40.1",
 		"firebase": "^9.14.0",
 		"framer-motion": "^7.6.7",
