hero minor fix, implementação inicial projeto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
 	"prettier.jsxSingleQuote": true,
 	"prettier.singleQuote": true,
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"cSpell.words": ["drei", "gltf", "GLTF"]
+	"cSpell.words": [
+		"drei",
+		"gltf",
+		"GLTF"
+	]
 }
