json não pode ter virgula no fim da array

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 			"@widgets/*": ["src/components/widgets/*"],
 			"@icons/*": ["src/components/icons/*"],
 			"@projects/*": ["src/components/projects/*"],
-			"@layouts/*": ["src/layouts/*"],
+			"@layouts/*": ["src/layouts/*"]
 		}
 	}
 }
