--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,20 +1,26 @@
 {
+	"plugins": [
+		"stylelint-scss"
+	],
 	"extends": "stylelint-config-standard-scss",
+	"no-invalid-position-at-import-rule": false,
 	"rules": {
 		"indentation": "tab",
 		"alpha-value-notation": "number",
-		"at-rule-empty-line-before": [
-			"always",
-			{
-				"except": ["blockless-after-same-name-blockless"],
-				"ignore": ["first-nested"]
-			}
-		],
+		"at-rule-no-unknown": null,
 		"scss/at-rule-no-unknown": [
 			true,
 			{
-				"ignoreAtRules": ["tailwind"]
+				"ignoreAtRules": [
+					"tailwind",
+					"apply",
+					"variants",
+					"responsive",
+					"screen"
+				]
 			}
-		]
+		],
+		"declaration-block-trailing-semicolon": null,
+		"no-descending-specificity": null
 	}
 }
