--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"lint": "stylelint \"**/*.{css,scss,sass}\""
 	},
 	"dependencies": {
 		"@astrojs/image": "^0.11.4",
@@ -32,17 +33,19 @@
 		"@types/three": "^0.146.0",
 		"astro": "^1.6.8",
 		"astro-icon": "^0.8.0",
-		"daisyui": "^2.40.1",
 		"firebase": "^9.14.0",
+		"flowbite-react": "^0.3.7",
 		"framer-motion": "^7.6.7",
 		"framer-motion-3d": "^7.6.7",
 		"limax": "^3.0.0",
 		"lorem-ipsum": "^2.0.8",
 		"postcss-import": "^15.0.0",
 		"postcss-nesting": "^10.2.0",
+		"postcss-scss": "^4.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-merge-refs": "^2.0.1",
+		"react-simply-carousel": "^8.4.1",
 		"sass": "^1.56.1",
 		"tailwindcss": "^3.2.4",
 		"three": "^0.146.0",
@@ -57,7 +60,8 @@
 		"eslint-plugin-astro": "^0.21.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"firebase-tools": "^11.16.1",
-		"stylelint": "^14.15.0",
+		"stylelint": "^14.16.1",
+		"stylelint-scss": "^4.3.0",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
