--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-merge-refs": "^2.0.1",
+		"react-simply-carousel": "^8.4.1",
 		"sass": "^1.56.1",
 		"tailwindcss": "^3.2.4",
 		"three": "^0.146.0",
