--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"astro-icon": "^0.8.0",
 		"daisyui": "^2.40.1",
 		"firebase": "^9.14.0",
+		"flowbite-react": "^0.3.7",
 		"framer-motion": "^7.6.7",
 		"framer-motion-3d": "^7.6.7",
 		"limax": "^3.0.0",
