--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-	"scss.lint.unknownAtRules": "ignore",
 	"files.associations": {
 		"*.css": "postcss"
 	},
@@ -24,5 +23,22 @@
 		"drei",
 		"gltf",
 		"GLTF"
-	]
+	],
+	"scss.lint.unknownAtRules": "ignore",
+	"css.validate": false,
+	"less.validate": false,
+	"scss.validate": false,
+	"stylelint.validate": [
+		"css",
+		"scss"
+	],
+	"[css]": {
+		"editor.defaultFormatter": "stylelint.vscode-stylelint"
+	},
+	"[scss]": {
+		"editor.defaultFormatter": "stylelint.vscode-stylelint"
+	},
+	"editor.codeActionsOnSave": {
+		"source.fixAll.stylelint": true
+	}
 }
