--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"lint": "stylelint \"**/*.{css,scss,sass}\""
 	},
 	"dependencies": {
 		"@astrojs/image": "^0.11.4",
@@ -41,11 +42,13 @@
 		"lorem-ipsum": "^2.0.8",
 		"postcss-import": "^15.0.0",
 		"postcss-nesting": "^10.2.0",
+		"postcss-scss": "^4.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-merge-refs": "^2.0.1",
 		"react-simply-carousel": "^8.4.1",
 		"sass": "^1.56.1",
+		"stylelint-scss": "^4.3.0",
 		"tailwindcss": "^3.2.4",
 		"three": "^0.146.0",
 		"upgrade": "^1.1.0",
@@ -59,7 +62,7 @@
 		"eslint-plugin-astro": "^0.21.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"firebase-tools": "^11.16.1",
-		"stylelint": "^14.15.0",
+		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
