--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
 			"@widgets/*": ["src/components/widgets/*"],
 			"@components/*": ["src/components/*"],
 			"@data/*": ["src/data/*"],
+			"@hooks/*": ["src/hooks/*"],
 			"@layouts/*": ["src/layouts/*"],
 			"@/*": ["src/*"]
 		}
