--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 			"@data/*": ["src/data/*"],
 			"@hooks/*": ["src/hooks/*"],
 			"@layouts/*": ["src/layouts/*"],
-			"@types/*": ["src/types/*"],
+			"types/*": ["src/types/*"],
 			"@/*": ["src/*"]
 		}
 	}
