--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -15,8 +15,23 @@ jobs:
         uses: withastro/action@v0
 
       - name: Deploy to Firebase
+        id: deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}'
           channelId: live
+
+      - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.repository }}
+          token: '${{ secrets.GITHUB_TOKEN }}'
+          ref: ${{ github.ref_name }}
+      - uses: actions/checkout@v3
+        with:
+          repository: 'myactionway/lighthouse-badges'
+          path: temp_lighthouse_badges_nested
+      - uses: myactionway/lighthouse-badger-action@v2.2
+        with:
+          urls: ${{steps.deploy.outputs.url}}
+          
