--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,5 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.stylelint": true
 	},
-	"cSpell.language": "en,pt-BR"
+	"cSpell.language": "en,pt-BR,pt"
 }
