--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install, build, and upload your site
         uses: withastro/action@v0
@@ -22,6 +22,9 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v3
+
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
