--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -17,14 +17,16 @@ jobs:
       - name: Install, build, and upload your site
         uses: withastro/action@v0
 
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: dist
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Checkout your repository using git
-        uses: actions/checkout@v3
-
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
