--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: dist
+          key: ${{ runner.os }}-build
 
   deploy:
     runs-on: ubuntu-latest
