--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -2,7 +2,7 @@ name: Deploy to Live
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
 
 permissions:
   contents: read
@@ -28,6 +28,9 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v3
+
       - name: Cache build restore
         uses: actions/cache/restore@v3
         with:
@@ -37,9 +40,9 @@ jobs:
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}'
-          channelId: live
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
+          channelId: ${{ github.ref == 'main' && 'live' || 'dev' }}
         id: deploy
 
     outputs:
@@ -56,7 +59,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: ${{ github.repository }}
-          token: '${{ secrets.GITHUB_TOKEN }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.ref_name }}
 
       - uses: actions/checkout@v3
