--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - run: echo ${{ github.ref }}
+      - run: echo ${{ github.ref_name }}
 
       - name: Checkout your repository
         uses: actions/checkout@v3
@@ -48,14 +48,13 @@ jobs:
           key: ${{ runner.os }}-build
 
       - name: Deploy to Firebase
+        id: deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
-          channelId: ${{ github.ref == 'main' && 'live' || github.ref }}
-          expires: ${{ github.ref == 'dev' && '30d' || '7d' }}
-
-        id: deploy
+          channelId: ${{ github.ref_name == 'main' && 'line' || github.ref_name }}
+          expires: ${{ github.ref_name == 'dev' && '30d' || '7d' }}
 
     outputs:
       url: ${{ steps.deploy.outputs.details_url }}
