--- a/.github/workflows/deploy_firebase_live.yml
+++ b/.github/workflows/deploy_firebase_live.yml
@@ -17,7 +17,12 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      - run: |
+          echo ${{ github.ref_name }} == 'main' && 'live' || ${{ github.ref_name }}
+          echo: ${{ github.ref_name }} == 'dev' && '30d' || '7d'
+
       - name: Checkout your repository
         uses: actions/checkout@v3
 
