--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -13,6 +13,7 @@ on:
 
 permissions:
   contents: read
+  id-token: read
 
 jobs:
   build:
@@ -60,9 +61,6 @@ jobs:
   analysis:
     runs-on: ubuntu-latest
     needs: deploy
-
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout your repository
