--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -61,10 +61,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout your repository
         uses: actions/checkout@v3
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.ref_name }}
 
       - name: Checkout the Lighthouse repository
