--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -58,6 +58,8 @@ jobs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
 
   analysis:
+    if: ${{ github.ref_name != 'main' }}
+
     runs-on: ubuntu-latest
     needs: deploy
 
