--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -2,13 +2,8 @@ name: Deploy to Firebase
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [ main, dev ]
   pull_request:
-      branches:
-        - '*'
-        - '!main'
 
 permissions:
   contents: read
@@ -51,7 +46,7 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
           channelId: ${{ github.ref_name == 'main' && 'live' || github.ref_name }}
-          expires: ${{ github.ref_name == 'dev' && '30d' || '7d' }}
+          expires: ${{ github.ref_name == 'main' && '' || github.ref_name == 'dev' && '30d' || '7d' }}
 
     outputs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
