--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -45,8 +45,8 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
-          channelId: ${{ github.ref_name == 'main' && '' || github.ref_name }}
-          expires: ${{ github.ref_name == 'main' && '' || github.ref_name == 'dev' && '30d' || '7d' }}
+          channelId: ${{ if github.ref_name == 'main' then ~ else github.ref_name }}
+          expires: ${{ if github.ref_name == 'main' then ~ else if github.ref_name == 'dev' then '30d' else '7d' }}
 
     outputs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
