--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -46,7 +46,7 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
           channelId: live
-          expires: ~
+          expires: 7d
 
     outputs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
