--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  id-token: read
 
 jobs:
   build-and-deploy:
@@ -28,6 +29,7 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
+          projectID: sw-space-site
           channelID: live
 
       - name: Checkout the Lighthouse repository
