--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -10,9 +10,6 @@ on:
         - '*'
         - '!main'
 
-permissions:
-  contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -57,13 +54,10 @@ jobs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
 
   analysis:
-    if: ${{ github.ref_name != 'main' }}
+    if: ${{ github.ref_name == 'dev' }}
 
     runs-on: ubuntu-latest
     needs: deploy
-
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout your repository
